--- a/www/style.css
+++ b/www/style.css
@@ -8,6 +8,7 @@ section,summary {
 
 body {
     background-image: url('./img/cloud.png');
+    background-attachment: fixed;
     color: black;
 }
 body>header>hgroup>h1 {
